# challenges

./: .gitignore  README.md
Python/ProjectEuler/: 1.py
Python/leetcode/: p1.py
Python/projecteuler/: p1.py  p2.py  p3.py  p4.py  p5.py
Rust/: Cargo.toml  main.rs  projecteuler.rs
Rust/leetcode/: p1.rs
Rust/projecteuler/: p1.rs  p2.rs
